bk_ida/gccida/c3/emit_push_insn
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_push_insn/src/expr.c:3718:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_push_insn/src/expr.c:3751:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v35; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_push_insn/src/expr.c:3753:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v37; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_push_insn/src/expr.c:3758:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v43; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_push_insn/src/expr.c:3760:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v45; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_push_insn/src/expr.c:3770:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v55; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_push_insn/src/expr.c:3773:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v58; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_push_insn/src/expr.c:3803:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v88; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_push_insn/src/expr.c:3804:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v89; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_push_insn/src/expr.c:3842:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), 
  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_push_insn/src/expr.c:3875:13: error: must use 'enum' tag to refer to type 'mode_class'
&& *( const mode_class *)( ( char *)mode_class_0 + ( ( v24 >> 14) & 0x3FC)) != MODE_INT ) 
            ^
            enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_push_insn/src/machmode.h:52:30: note: enum 'mode_class' is hidden by a non-type declaration of 'mode_class' here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_push_insn/src/expr.c:3875:37: error: use of undeclared identifier 'mode_class_0'
&& *( const mode_class *)( ( char *)mode_class_0 + ( ( v24 >> 14) & 0x3FC)) != MODE_INT ) 
                                    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_push_insn/src/expr.c:3894:31: error: invalid suffix 'orce' on integer constant
v32 = operand_sub*(short *)0xforce( v16, v31, mode); 
                              ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_push_insn/src/expr.c:3894:7: error: use of undeclared identifier 'operand_sub'
v32 = operand_sub*(short *)0xforce( v16, v31, mode); 
      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_push_insn/src/expr.c:3897:18: error: invalid suffix 'xmode' on integer constant
v35 = *(short *)0xmode; 
                 ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_push_insn/src/expr.c:3984:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v92.rtwint = ( __int64)op0->fld[0]; 
                       ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_push_insn/src/expr.c:3994:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v92.rtwint = ( __int64)op0->fld[0]; 
                       ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_push_insn/src/expr.c:4038:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), 
  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_push_insn/src/expr.c:4090:20: error: expected expression
if ( *( insn_code *)( ( char *)&optab_table[30]->handlers[0].insn_code + v52) != CODE_FOR_nothing 
                   ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_push_insn/src/obj/expr.o] Error 1
